--- a/src/app/delete-book/delete-book.component.html
+++ b/src/app/delete-book/delete-book.component.html
@@ -1,9 +1,11 @@
-<p>Delete Class???</p>
-<div class="card">
+<div style="height: 50%; margin-left: 25%">
+<h3>Delete Class???</h3>
+<div >
   <div class="card-body">
-    <div class="bg-danger p-2 text-white mb-3">Confirm deletion?</div>
+    <div style="width: 60%;text-align: center" class="bg-danger p-2 text-white mb-3">Confirm deletion?</div>
     <button (click)="onDelete()" class="btn btn-outline-danger">Delete</button>
   </div>
 </div>
 <a [routerLink]="['']" class="btn btn-outline-info mb-3">Back</a>
+</div>
 
